src/hammer_fgd/hammer_fgd.bison.output
Terminals unused in grammar

    "model"
    EndOfFile


Grammar

    0 $accept: FGDFile $end

    1 FGDFile: classes

    2 classes: %empty
    3        | SolidClassDef
    4        | PointClassDef
    5        | BaseClassDef

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    7 BasesClassesOpt: %empty
    8                | "base" '(' identifierListOpt ')'

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

   10 BaseClassDef: "@BaseClass" '=' '[' ClassFieldsOpt ']'

   11 PointEntityConstructorListOpt: %empty
   12                              | PointEntityConstructorListOpt PointEntityConstructor

   13 PointEntityConstructor: IconspriteDefOpt
   14                       | StudioDefOpt
   15                       | BoundingBoxDefOpt
   16                       | ColorDefOpt

   17 ColorDefOpt: "color" '(' Number Number Number ')'

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' Number Number Number ')'

   19 StudioDefOpt: "studio" '(' StringLiteral ')'

   20 IconspriteDefOpt: "iconsprite" '(' StringLiteral ')'

   21 identifierListOpt: %empty
   22                  | identifierList

   23 identifierList: identifierList ',' Identifier
   24               | Identifier

   25 ClassFieldsOpt: %empty
   26               | ClassFieldDef

   27 ClassFieldDef: Identifier '[' TypeId ']' ':' StringLiteral ':' DefaultValueOpt
   28              | Identifier '[' "flags" ']' '=' '[' FlagsValues ']'
   29              | Identifier '[' "choices" ']' ':' StringLiteral ':' Number '=' '[' EnumValues ']'

   30 FlagsValues: %empty
   31            | Number ':' StringLiteral

   32 EnumValues: %empty
   33           | Number ':' StringLiteral

   34 TypeId: "integer"
   35       | "color255"
   36       | "string"
   37       | "sprite"
   38       | "studio"

   39 DefaultValueOpt: %empty
   40                | StringLiteral


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 17 18 19 20
    ')' (41) 8 17 18 19 20
    ',' (44) 18 23
    ':' (58) 6 9 27 29 31 33
    '=' (61) 6 9 10 28 29
    '[' (91) 6 9 10 27 28 29
    ']' (93) 6 9 10 27 28 29
    error (256)
    "@SolidClass" (258) 6
    "@BaseClass" (259) 10
    "@PointClass" (260) 9
    StringLiteral (261) 6 9 19 20 27 29 31 33 40
    Identifier (262) 6 9 23 24 27 28 29
    Number (263) 17 18 29 31 33
    "base" (264) 8
    "size" (265) 18
    "iconsprite" (266) 20
    "color" (267) 17
    "integer" (268) 34
    "color255" (269) 35
    "string" (270) 36
    "sprite" (271) 37
    "model" (272)
    "studio" (273) 19 38
    "flags" (274) 28
    "choices" (275) 29
    EndOfFile (276)


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    FGDFile (30)
        on left: 1
        on right: 0
    classes (31)
        on left: 2 3 4 5
        on right: 1
    SolidClassDef (32)
        on left: 6
        on right: 3
    BasesClassesOpt (33)
        on left: 7 8
        on right: 6
    PointClassDef (34)
        on left: 9
        on right: 4
    BaseClassDef (35)
        on left: 10
        on right: 5
    PointEntityConstructorListOpt (36)
        on left: 11 12
        on right: 9 12
    PointEntityConstructor (37)
        on left: 13 14 15 16
        on right: 12
    ColorDefOpt (38)
        on left: 17
        on right: 16
    BoundingBoxDefOpt (39)
        on left: 18
        on right: 15
    StudioDefOpt (40)
        on left: 19
        on right: 14
    IconspriteDefOpt (41)
        on left: 20
        on right: 13
    identifierListOpt (42)
        on left: 21 22
        on right: 8
    identifierList (43)
        on left: 23 24
        on right: 22 23
    ClassFieldsOpt (44)
        on left: 25 26
        on right: 6 9 10
    ClassFieldDef (45)
        on left: 27 28 29
        on right: 26
    FlagsValues (46)
        on left: 30 31
        on right: 28
    EnumValues (47)
        on left: 32 33
        on right: 29
    TypeId (48)
        on left: 34 35 36 37 38
        on right: 27
    DefaultValueOpt (49)
        on left: 39 40
        on right: 27


State 0

    0 $accept: . FGDFile $end

    "@SolidClass"  shift, and go to state 1
    "@BaseClass"   shift, and go to state 2
    "@PointClass"  shift, and go to state 3

    $default  reduce using rule 2 (classes)

    FGDFile        go to state 4
    classes        go to state 5
    SolidClassDef  go to state 6
    PointClassDef  go to state 7
    BaseClassDef   go to state 8


State 1

    6 SolidClassDef: "@SolidClass" . BasesClassesOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    "base"  shift, and go to state 9

    $default  reduce using rule 7 (BasesClassesOpt)

    BasesClassesOpt  go to state 10


State 2

   10 BaseClassDef: "@BaseClass" . '=' '[' ClassFieldsOpt ']'

    '='  shift, and go to state 11


State 3

    9 PointClassDef: "@PointClass" . PointEntityConstructorListOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    $default  reduce using rule 11 (PointEntityConstructorListOpt)

    PointEntityConstructorListOpt  go to state 12


State 4

    0 $accept: FGDFile . $end

    $end  shift, and go to state 13


State 5

    1 FGDFile: classes .

    $default  reduce using rule 1 (FGDFile)


State 6

    3 classes: SolidClassDef .

    $default  reduce using rule 3 (classes)


State 7

    4 classes: PointClassDef .

    $default  reduce using rule 4 (classes)


State 8

    5 classes: BaseClassDef .

    $default  reduce using rule 5 (classes)


State 9

    8 BasesClassesOpt: "base" . '(' identifierListOpt ')'

    '('  shift, and go to state 14


State 10

    6 SolidClassDef: "@SolidClass" BasesClassesOpt . '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    '='  shift, and go to state 15


State 11

   10 BaseClassDef: "@BaseClass" '=' . '[' ClassFieldsOpt ']'

    '['  shift, and go to state 16


State 12

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt . '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']'
   12 PointEntityConstructorListOpt: PointEntityConstructorListOpt . PointEntityConstructor

    "size"        shift, and go to state 17
    "iconsprite"  shift, and go to state 18
    "color"       shift, and go to state 19
    "studio"      shift, and go to state 20
    '='           shift, and go to state 21

    PointEntityConstructor  go to state 22
    ColorDefOpt             go to state 23
    BoundingBoxDefOpt       go to state 24
    StudioDefOpt            go to state 25
    IconspriteDefOpt        go to state 26


State 13

    0 $accept: FGDFile $end .

    $default  accept


State 14

    8 BasesClassesOpt: "base" '(' . identifierListOpt ')'

    Identifier  shift, and go to state 27

    $default  reduce using rule 21 (identifierListOpt)

    identifierListOpt  go to state 28
    identifierList     go to state 29


State 15

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' . Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    Identifier  shift, and go to state 30


State 16

   10 BaseClassDef: "@BaseClass" '=' '[' . ClassFieldsOpt ']'

    Identifier  shift, and go to state 31

    $default  reduce using rule 25 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 32
    ClassFieldDef   go to state 33


State 17

   18 BoundingBoxDefOpt: "size" . '(' Number Number Number ',' Number Number Number ')'

    '('  shift, and go to state 34


State 18

   20 IconspriteDefOpt: "iconsprite" . '(' StringLiteral ')'

    '('  shift, and go to state 35


State 19

   17 ColorDefOpt: "color" . '(' Number Number Number ')'

    '('  shift, and go to state 36


State 20

   19 StudioDefOpt: "studio" . '(' StringLiteral ')'

    '('  shift, and go to state 37


State 21

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' . Identifier ':' StringLiteral '[' ClassFieldsOpt ']'

    Identifier  shift, and go to state 38


State 22

   12 PointEntityConstructorListOpt: PointEntityConstructorListOpt PointEntityConstructor .

    $default  reduce using rule 12 (PointEntityConstructorListOpt)


State 23

   16 PointEntityConstructor: ColorDefOpt .

    $default  reduce using rule 16 (PointEntityConstructor)


State 24

   15 PointEntityConstructor: BoundingBoxDefOpt .

    $default  reduce using rule 15 (PointEntityConstructor)


State 25

   14 PointEntityConstructor: StudioDefOpt .

    $default  reduce using rule 14 (PointEntityConstructor)


State 26

   13 PointEntityConstructor: IconspriteDefOpt .

    $default  reduce using rule 13 (PointEntityConstructor)


State 27

   24 identifierList: Identifier .

    $default  reduce using rule 24 (identifierList)


State 28

    8 BasesClassesOpt: "base" '(' identifierListOpt . ')'

    ')'  shift, and go to state 39


State 29

   22 identifierListOpt: identifierList .
   23 identifierList: identifierList . ',' Identifier

    ','  shift, and go to state 40

    $default  reduce using rule 22 (identifierListOpt)


State 30

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier . ':' StringLiteral '[' ClassFieldsOpt ']'

    ':'  shift, and go to state 41


State 31

   27 ClassFieldDef: Identifier . '[' TypeId ']' ':' StringLiteral ':' DefaultValueOpt
   28              | Identifier . '[' "flags" ']' '=' '[' FlagsValues ']'
   29              | Identifier . '[' "choices" ']' ':' StringLiteral ':' Number '=' '[' EnumValues ']'

    '['  shift, and go to state 42


State 32

   10 BaseClassDef: "@BaseClass" '=' '[' ClassFieldsOpt . ']'

    ']'  shift, and go to state 43


State 33

   26 ClassFieldsOpt: ClassFieldDef .

    $default  reduce using rule 26 (ClassFieldsOpt)


State 34

   18 BoundingBoxDefOpt: "size" '(' . Number Number Number ',' Number Number Number ')'

    Number  shift, and go to state 44


State 35

   20 IconspriteDefOpt: "iconsprite" '(' . StringLiteral ')'

    StringLiteral  shift, and go to state 45


State 36

   17 ColorDefOpt: "color" '(' . Number Number Number ')'

    Number  shift, and go to state 46


State 37

   19 StudioDefOpt: "studio" '(' . StringLiteral ')'

    StringLiteral  shift, and go to state 47


State 38

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier . ':' StringLiteral '[' ClassFieldsOpt ']'

    ':'  shift, and go to state 48


State 39

    8 BasesClassesOpt: "base" '(' identifierListOpt ')' .

    $default  reduce using rule 8 (BasesClassesOpt)


State 40

   23 identifierList: identifierList ',' . Identifier

    Identifier  shift, and go to state 49


State 41

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' . StringLiteral '[' ClassFieldsOpt ']'

    StringLiteral  shift, and go to state 50


State 42

   27 ClassFieldDef: Identifier '[' . TypeId ']' ':' StringLiteral ':' DefaultValueOpt
   28              | Identifier '[' . "flags" ']' '=' '[' FlagsValues ']'
   29              | Identifier '[' . "choices" ']' ':' StringLiteral ':' Number '=' '[' EnumValues ']'

    "integer"   shift, and go to state 51
    "color255"  shift, and go to state 52
    "string"    shift, and go to state 53
    "sprite"    shift, and go to state 54
    "studio"    shift, and go to state 55
    "flags"     shift, and go to state 56
    "choices"   shift, and go to state 57

    TypeId  go to state 58


State 43

   10 BaseClassDef: "@BaseClass" '=' '[' ClassFieldsOpt ']' .

    $default  reduce using rule 10 (BaseClassDef)


State 44

   18 BoundingBoxDefOpt: "size" '(' Number . Number Number ',' Number Number Number ')'

    Number  shift, and go to state 59


State 45

   20 IconspriteDefOpt: "iconsprite" '(' StringLiteral . ')'

    ')'  shift, and go to state 60


State 46

   17 ColorDefOpt: "color" '(' Number . Number Number ')'

    Number  shift, and go to state 61


State 47

   19 StudioDefOpt: "studio" '(' StringLiteral . ')'

    ')'  shift, and go to state 62


State 48

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' . StringLiteral '[' ClassFieldsOpt ']'

    StringLiteral  shift, and go to state 63


State 49

   23 identifierList: identifierList ',' Identifier .

    $default  reduce using rule 23 (identifierList)


State 50

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' StringLiteral . '[' ClassFieldsOpt ']'

    '['  shift, and go to state 64


State 51

   34 TypeId: "integer" .

    $default  reduce using rule 34 (TypeId)


State 52

   35 TypeId: "color255" .

    $default  reduce using rule 35 (TypeId)


State 53

   36 TypeId: "string" .

    $default  reduce using rule 36 (TypeId)


State 54

   37 TypeId: "sprite" .

    $default  reduce using rule 37 (TypeId)


State 55

   38 TypeId: "studio" .

    $default  reduce using rule 38 (TypeId)


State 56

   28 ClassFieldDef: Identifier '[' "flags" . ']' '=' '[' FlagsValues ']'

    ']'  shift, and go to state 65


State 57

   29 ClassFieldDef: Identifier '[' "choices" . ']' ':' StringLiteral ':' Number '=' '[' EnumValues ']'

    ']'  shift, and go to state 66


State 58

   27 ClassFieldDef: Identifier '[' TypeId . ']' ':' StringLiteral ':' DefaultValueOpt

    ']'  shift, and go to state 67


State 59

   18 BoundingBoxDefOpt: "size" '(' Number Number . Number ',' Number Number Number ')'

    Number  shift, and go to state 68


State 60

   20 IconspriteDefOpt: "iconsprite" '(' StringLiteral ')' .

    $default  reduce using rule 20 (IconspriteDefOpt)


State 61

   17 ColorDefOpt: "color" '(' Number Number . Number ')'

    Number  shift, and go to state 69


State 62

   19 StudioDefOpt: "studio" '(' StringLiteral ')' .

    $default  reduce using rule 19 (StudioDefOpt)


State 63

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' StringLiteral . '[' ClassFieldsOpt ']'

    '['  shift, and go to state 70


State 64

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' StringLiteral '[' . ClassFieldsOpt ']'

    Identifier  shift, and go to state 31

    $default  reduce using rule 25 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 71
    ClassFieldDef   go to state 33


State 65

   28 ClassFieldDef: Identifier '[' "flags" ']' . '=' '[' FlagsValues ']'

    '='  shift, and go to state 72


State 66

   29 ClassFieldDef: Identifier '[' "choices" ']' . ':' StringLiteral ':' Number '=' '[' EnumValues ']'

    ':'  shift, and go to state 73


State 67

   27 ClassFieldDef: Identifier '[' TypeId ']' . ':' StringLiteral ':' DefaultValueOpt

    ':'  shift, and go to state 74


State 68

   18 BoundingBoxDefOpt: "size" '(' Number Number Number . ',' Number Number Number ')'

    ','  shift, and go to state 75


State 69

   17 ColorDefOpt: "color" '(' Number Number Number . ')'

    ')'  shift, and go to state 76


State 70

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' StringLiteral '[' . ClassFieldsOpt ']'

    Identifier  shift, and go to state 31

    $default  reduce using rule 25 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 77
    ClassFieldDef   go to state 33


State 71

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt . ']'

    ']'  shift, and go to state 78


State 72

   28 ClassFieldDef: Identifier '[' "flags" ']' '=' . '[' FlagsValues ']'

    '['  shift, and go to state 79


State 73

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' . StringLiteral ':' Number '=' '[' EnumValues ']'

    StringLiteral  shift, and go to state 80


State 74

   27 ClassFieldDef: Identifier '[' TypeId ']' ':' . StringLiteral ':' DefaultValueOpt

    StringLiteral  shift, and go to state 81


State 75

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' . Number Number Number ')'

    Number  shift, and go to state 82


State 76

   17 ColorDefOpt: "color" '(' Number Number Number ')' .

    $default  reduce using rule 17 (ColorDefOpt)


State 77

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt . ']'

    ']'  shift, and go to state 83


State 78

    6 SolidClassDef: "@SolidClass" BasesClassesOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']' .

    $default  reduce using rule 6 (SolidClassDef)


State 79

   28 ClassFieldDef: Identifier '[' "flags" ']' '=' '[' . FlagsValues ']'

    Number  shift, and go to state 84

    $default  reduce using rule 30 (FlagsValues)

    FlagsValues  go to state 85


State 80

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral . ':' Number '=' '[' EnumValues ']'

    ':'  shift, and go to state 86


State 81

   27 ClassFieldDef: Identifier '[' TypeId ']' ':' StringLiteral . ':' DefaultValueOpt

    ':'  shift, and go to state 87


State 82

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' Number . Number Number ')'

    Number  shift, and go to state 88


State 83

    9 PointClassDef: "@PointClass" PointEntityConstructorListOpt '=' Identifier ':' StringLiteral '[' ClassFieldsOpt ']' .

    $default  reduce using rule 9 (PointClassDef)


State 84

   31 FlagsValues: Number . ':' StringLiteral

    ':'  shift, and go to state 89


State 85

   28 ClassFieldDef: Identifier '[' "flags" ']' '=' '[' FlagsValues . ']'

    ']'  shift, and go to state 90


State 86

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' . Number '=' '[' EnumValues ']'

    Number  shift, and go to state 91


State 87

   27 ClassFieldDef: Identifier '[' TypeId ']' ':' StringLiteral ':' . DefaultValueOpt

    StringLiteral  shift, and go to state 92

    $default  reduce using rule 39 (DefaultValueOpt)

    DefaultValueOpt  go to state 93


State 88

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' Number Number . Number ')'

    Number  shift, and go to state 94


State 89

   31 FlagsValues: Number ':' . StringLiteral

    StringLiteral  shift, and go to state 95


State 90

   28 ClassFieldDef: Identifier '[' "flags" ']' '=' '[' FlagsValues ']' .

    $default  reduce using rule 28 (ClassFieldDef)


State 91

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' Number . '=' '[' EnumValues ']'

    '='  shift, and go to state 96


State 92

   40 DefaultValueOpt: StringLiteral .

    $default  reduce using rule 40 (DefaultValueOpt)


State 93

   27 ClassFieldDef: Identifier '[' TypeId ']' ':' StringLiteral ':' DefaultValueOpt .

    $default  reduce using rule 27 (ClassFieldDef)


State 94

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' Number Number Number . ')'

    ')'  shift, and go to state 97


State 95

   31 FlagsValues: Number ':' StringLiteral .

    $default  reduce using rule 31 (FlagsValues)


State 96

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' Number '=' . '[' EnumValues ']'

    '['  shift, and go to state 98


State 97

   18 BoundingBoxDefOpt: "size" '(' Number Number Number ',' Number Number Number ')' .

    $default  reduce using rule 18 (BoundingBoxDefOpt)


State 98

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' Number '=' '[' . EnumValues ']'

    Number  shift, and go to state 99

    $default  reduce using rule 32 (EnumValues)

    EnumValues  go to state 100


State 99

   33 EnumValues: Number . ':' StringLiteral

    ':'  shift, and go to state 101


State 100

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' Number '=' '[' EnumValues . ']'

    ']'  shift, and go to state 102


State 101

   33 EnumValues: Number ':' . StringLiteral

    StringLiteral  shift, and go to state 103


State 102

   29 ClassFieldDef: Identifier '[' "choices" ']' ':' StringLiteral ':' Number '=' '[' EnumValues ']' .

    $default  reduce using rule 29 (ClassFieldDef)


State 103

   33 EnumValues: Number ':' StringLiteral .

    $default  reduce using rule 33 (EnumValues)
